--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -2,9 +2,10 @@
 :root {
   --vt-c-white: #ffffff;
   --vt-c-soft: #CCD6F6;
+  --vt-c-light: #9EA9CB;
   --vt-c-mute: #8892B0;
 
-  --vt-c-black: #181818;
+  --vt-c-black: #1D1D22;
   --vt-c-black-soft: #222222;
   --vt-c-black-mute: #282828;
 
@@ -28,6 +29,7 @@
 :root {
   --color-text-white: var(--vt-c-white);
   --color-text-soft: var(--vt-c-soft);
+  --color-text-light: var(--vt-c-light);
   --color-text-mute: var(--vt-c-mute);
 
   --color-border: var(--vt-c-divider-light-2);
@@ -37,6 +39,9 @@
   --color-text: var(--vt-c-text-light-1);
 
   --color-hover: var(--vt-c-green);
+
+  --color-green: var(--vt-c-green);
+  --color-red: var(--vt-c-red);
 
   --section-gap: 160px;
 }
