--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -3,7 +3,7 @@
   --vt-c-white: #ffffff;
   --vt-c-soft: #CCD6F6;
   --vt-c-light: #9EA9CB;
-  --vt-c-mute: #8892B0;
+  --vt-c-mute: #AFB9D7;
 
   --vt-c-black: #1D1D22;
   --vt-c-black-soft: #222222;
