Update Home and Experience to add responsive

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,17 +26,23 @@ a {
 
 .title {
   font-family: 'Montserrat';
-    font-weight: 900;
-    font-size: 4.3rem;
-    color: var(--color-background);
-    text-shadow: 2px 2px 0 var(--color-text-soft), 
-      2px -2px 0 var(--color-text-soft), 
-      -2px 2px 0 var(--color-text-soft), 
-      -2px -2px 0 var(--color-text-soft), 
-      2px 0px 0 var(--color-text-soft), 
-      0px 2px 0 var(--color-text-soft), 
-      -2px 0px 0 var(--color-text-soft), 
-      0px -2px 0 var(--color-text-soft);
+  font-weight: 900;
+  font-size: 4.3rem;
+  color: var(--color-background);
+  text-shadow: 2px 2px 0 var(--color-text-soft), 
+    2px -2px 0 var(--color-text-soft), 
+    -2px 2px 0 var(--color-text-soft), 
+    -2px -2px 0 var(--color-text-soft), 
+    2px 0px 0 var(--color-text-soft), 
+    0px 2px 0 var(--color-text-soft), 
+    -2px 0px 0 var(--color-text-soft), 
+    0px -2px 0 var(--color-text-soft);
+}
+
+@media only screen and (max-width: 768px) {
+  .title {
+    font-size: 3rem;
+  }
 }
 /* 
 a,
